weather visibility fixed

--- a/static/weather/css/style.css
+++ b/static/weather/css/style.css
@@ -30,10 +30,6 @@
     justify-content: space-evenly;
 }
 
-.card-body{
-    visibility: hidden;
-}
-
 .tiempo{
     display: flex;
     flex-direction: column;
